# consensusmind

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  config.toml  temp.txt
docs/: index.html  login.html  signup.html
src/: lib.rs  main.rs
src/knowledge/: arxiv.rs  database.rs  mod.rs  paper_parser.rs
src/llm/: client.rs  mod.rs  prompts.rs
src/utils/: config.rs  logger.rs
tests/: integration_tests.rs
tests/integration/: mod.rs
